ui调整，剩下订阅有点问题

--- a/com.store.smhilaw1.MainActivity/res/layout/orderstype.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/orderstype.xml
@@ -7,6 +7,8 @@ android:layout_height="fill_parent">
 <TextView 
 android:layout_width="fill_parent"
 android:layout_height="wrap_content" 
+android:text="订单消息"
+android:gravity="center_horizontal"
 android:id="@+id/textView" />
 
 <!--
@@ -14,16 +16,14 @@ RadioButton - 单选框控件
 RadioGroup - 对其内的单选框控件做分组
 checkedButton - 指定组内被选中的单选框的 ID
 -->
-
 <RadioGroup 
 android:id="@+id/radioGroup"
 android:layout_width="fill_parent" 
-android:layout_height="fill_parent"
+android:layout_height="wrap_content"
 android:checkedButton="@+id/rad3" 
 android:orientation="horizontal"
-
-android:gravity="center_vertical|center_horizontal">
-
+android:gravity="center_vertical|center_horizontal"
+>
 <RadioButton 
 android:text="day" 
 android:id="@+id/rad1"
@@ -31,13 +31,13 @@ android:layout_width="wrap_content"
 android:layout_height="wrap_content">
 </RadioButton>
 <RadioButton 
-android:text="quarter" 
+android:text="month" 
 android:id="@+id/rad2"
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content">
 </RadioButton>
 <RadioButton 
-android:text="rad3" 
+android:text="quarter" 
 android:id="@+id/rad3"
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content">
@@ -49,6 +49,26 @@ android:layout_width="wrap_content"
 android:layout_height="wrap_content">
 </RadioButton>
 </RadioGroup>
+<LinearLayout 
+    android:layout_width="fill_parent"
+android:layout_height="wrap_content" 
+android:orientation="horizontal"
+android:gravity="center_vertical|center_horizontal"
+    >
+    <Button 
+        android:layout_marginLeft="10dp"
+android:text="confirm" 
+android:id="@+id/rad3"
+android:layout_width="wrap_content" 
+android:layout_height="wrap_content"/>
+<Button 
+android:text="cancle" 
+ android:layout_marginLeft="10dp"
+android:id="@+id/rad3"
+android:layout_width="wrap_content" 
+android:layout_height="wrap_content"/>
+    
+</LinearLayout>
 
 </LinearLayout>
 
