--- a/com.store.smhilaw1.MainActivity/res/layout/music_detail.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/music_detail.xml
@@ -129,6 +129,7 @@
           <ListView
             android:id="@+id/music_detail_list"
             android:focusable="false"
+            android:descendantFocusability="afterDescendants"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_marginLeft="5.0dip"
@@ -140,7 +141,6 @@
             android:listSelector="@color/transparent"
             android:paddingTop="5.0dip"
             android:scrollbarStyle="outsideInset" >
-
 	</ListView>
     </LinearLayout>
     <TextView
