--- a/com.store.smhilaw1.MainActivity/res/layout/musicdetailitem.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/musicdetailitem.xml
@@ -29,9 +29,10 @@
                 android:layout_width="fill_parent"
 			    android:layout_height="wrap_content" >
 		    	<SeekBar
+		android:visibility="invisible"
     android:id="@+id/progress_bar" 
     android:layout_weight="1"
-    android:layout_height="50dp"
+    android:layout_height="40dp"
     android:layout_width="fill_parent"
       android:thumb="@drawable/thumb_selector"
                 android:thumbOffset="20dip" 
