搜索还剩一点，还有焦点没解决，剩下一开源播放器

--- a/com.store.smhilaw1.MainActivity/res/layout/design_sketch_hor.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/design_sketch_hor.xml
@@ -172,7 +172,7 @@
                 android:layout_marginBottom="3dip"
                 android:gravity="center"
                 android:singleLine="true"
-                android:text="0/0" />
+                android:text="第1页" />
             <Button
                 android:id="@+id/page_next"
                 android:layout_width="wrap_content"
