--- a/com.store.smhilaw1.MainActivity/res/layout/activity_main_1920.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/activity_main_1920.xml
@@ -46,7 +46,7 @@
                 android:textSize="20dip" />
 
             <Button
-                android:id="@+id/serch_button"
+                android:id="@+id/search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -57,7 +57,7 @@
                 android:background="@drawable/search" />
 
             <EditText
-                android:id="@+id/serch_input"
+                android:id="@+id/search_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -65,7 +65,7 @@
                 android:layout_marginLeft="100dip"
                 android:layout_marginRight="20dip"
                 android:paddingLeft="10dip"
-                android:layout_toLeftOf="@id/serch_button"
+                android:layout_toLeftOf="@id/search_button"
                 android:layout_toRightOf="@id/store"
                 android:background="@drawable/input"
                 android:hint="@string/serch_hint"
