--- a/com.store.smhilaw1.MainActivity/res/layout/music_detail1.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/music_detail1.xml
@@ -12,7 +12,7 @@
         android:layout_height="30dp"
         >
         <TextView
-            android:id="@+id/title_text"
+            android:id="@+id/musicdetail_text"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_alignParentTop="true"
