--- a/com.store.smhilaw1.MainActivity/res/layout/musicdetailitem.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/musicdetailitem.xml
@@ -5,11 +5,12 @@
      android:focusable="true"
      android:background="@drawable/ring_box_selector"
     android:focusableInTouchMode="true"
-    android:orientation="vertical"
+    android:orientation="horizontal"
      >
       <LinearLayout
                 android:layout_width="fill_parent"
                 android:orientation="vertical"
+                android:layout_weight="1"
 			    android:layout_height="wrap_content" >
   <TextView 
         android:layout_width="fill_parent"
@@ -26,6 +27,7 @@
     ></TextView>
         </LinearLayout>
       <LinearLayout
+          		android:layout_weight="1"
                 android:layout_width="fill_parent"
 			    android:layout_height="wrap_content" >
 		    	<SeekBar
@@ -34,8 +36,8 @@
     android:layout_weight="1"
     android:layout_height="40dp"
     android:layout_width="fill_parent"
-      android:thumb="@drawable/thumb_selector"
-                android:thumbOffset="20dip" 
+    android:thumb="@drawable/thumb_selector"
+    android:thumbOffset="20dip" 
     android:progressDrawable="@drawable/menu_player_controller_seekbar_style"
     style="?android:attr/progressBarStyleHorizontal"
     />
