--- a/com.store.smhilaw1.MainActivity/res/layout/activity_main_1920.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/activity_main_1920.xml
@@ -54,7 +54,7 @@
                 android:layout_marginBottom="8dip"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="40dip"
-                android:background="@drawable/search" />
+                android:background="@drawable/search_selector" />
 
             <EditText
                 android:id="@+id/search_input"
