修改部分页面，还剩下播放一个逻辑问题

--- a/com.store.smhilaw1.MainActivity/res/drawable/ring_box_selector.xml
+++ b/com.store.smhilaw1.MainActivity/res/drawable/ring_box_selector.xml
@@ -12,5 +12,5 @@
         android:state_focused="true" 
         android:state_selected="true"
         />
-
+   <item android:drawable="@drawable/main_selector_modify_normal" android:state_focused="false"/> 
 </selector>
