--- a/com.store.smhilaw1.MainActivity/res/layout/activity_main_1920.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/activity_main_1920.xml
@@ -84,7 +84,7 @@
 
             <fragment
                 android:id="@+id/left"
-                android:name="com.ccdrive.musicstore.main.MainActivity1$LeftFragment"
+                android:name="com.ccdrive.musicstore.main.MainActivity$LeftFragment"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"                                             
                 android:layout_weight="5" />
