--- a/com.store.smhilaw1.MainActivity/res/layout/music_sketch_hor_item.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/music_sketch_hor_item.xml
@@ -10,8 +10,8 @@
       
     <ImageView
         android:id="@+id/ItemIcon"
-        android:layout_width="100dip"
-        android:layout_height="60dip"
+        android:layout_width="150dip"
+        android:layout_height="115dip"
         android:layout_centerHorizontal="true"
         android:scaleType="fitXY"
         android:src="@drawable/ic_launcher"
@@ -33,7 +33,7 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
         android:text="pleasegohome"
-        android:textColor="@color/blue"
+        android:textColor="#D9D919"
         android:textSize="24dip" >
     </TextView>
 
