--- a/com.store.smhilaw1.MainActivity/res/layout/musicdetailitem.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/musicdetailitem.xml
@@ -3,6 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
      android:focusable="true"
+     
      android:background="@drawable/ring_box_selector"
     android:focusableInTouchMode="true"
     android:orientation="horizontal"
@@ -14,7 +15,8 @@
 			    android:layout_height="wrap_content" >
   <TextView 
         android:layout_width="fill_parent"
-         android:layout_height="20dip"
+         android:layout_height="40dip"
+         android:textSize="28sp"
          android:text="风往北吹"
          android:id="@+id/name"
       />  
