--- a/com.store.smhilaw1.MainActivity/res/layout/soft_detail.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/soft_detail.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:background="#333333"
+    >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
     
     <RelativeLayout 
         android:layout_width="fill_parent"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         >
 
         <TextView
@@ -18,6 +23,7 @@
             android:textSize="22sp"
             android:textColor="@android:color/white"
             android:gravity="center"
+            android:text="多米音乐"
             android:background="#00C5CD" />
 
         <ImageView
@@ -31,14 +37,14 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_weight="1"
         android:layout_height="wrap_content" >
 
         <ImageView
             android:id="@+id/appimage"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+           android:layout_width="180dp"
+            android:layout_height="150dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="35dp"
@@ -51,27 +57,32 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="28dp"
             android:layout_marginTop="34dp"
+            android:textSize="28sp"
             android:layout_toRightOf="@+id/appimage"
             android:text="多米" />
         <TextView
             android:id="@+id/appcompany"
+            android:layout_marginTop="10dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="24sp"
             android:layout_alignLeft="@+id/appname"
             android:layout_below="@+id/appname"
             android:text="作者：多米音乐" />
 
         <TextView
+            android:layout_marginTop="5dip"
             android:id="@+id/Issuedate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="24sp"
             android:layout_alignLeft="@+id/appcompany"
             android:layout_below="@+id/appcompany"
             android:text="发行日期：2013-02-26" />
          </RelativeLayout>
 <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_weight="1"
+        android:layout_marginTop="10dip"
         android:layout_height="wrap_content" >
         <TextView
             android:id="@+id/versions"
@@ -81,6 +92,7 @@
             android:layout_below="@+id/appimage"
             android:layout_marginRight="15dp"
             android:singleLine="false"
+            android:textSize="24sp"
             android:text=" 版本：4.0" />
         
         <TextView
@@ -90,6 +102,8 @@
             android:layout_marginLeft="45dp"
             android:layout_below="@+id/versions"
             android:layout_marginRight="15dp"
+            android:textSize="24sp"
+            android:layout_marginTop="5dip"
             android:singleLine="false"
             android:text=" 发布日期：2012.4.1" />
         
@@ -97,8 +111,10 @@
             android:id="@+id/platform"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dip"
             android:layout_marginLeft="45dp"
             android:layout_below="@+id/publishdate"
+            android:textSize="24sp"
             android:layout_marginRight="15dp"
             android:singleLine="false"
             android:text=" 应用平台：windows" />
@@ -106,7 +122,10 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_marginTop="10dip"
+        android:layout_width="wrap_content"
+         android:layout_marginLeft="20dp"
+         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content" >
         <Button
             android:id="@+id/uninstall"
@@ -125,6 +144,7 @@
             </RelativeLayout>
     <TextView
         android:id="@+id/textView6"
+        android:textSize="28sp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -132,22 +152,20 @@
         android:layout_marginLeft="20dp" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="fill_parent"
-        android:layout_height="5dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-    
-        />
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8.0dip"
+            android:layout_marginTop="12.0dip"
+            android:scaleType="fitXY"
+            android:src="@drawable/drawable_divider" />
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp" >
  <LinearLayout
             android:id="@+id/items01"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" >
             <include
@@ -191,7 +209,6 @@
                  android:nextFocusDown="@+id/itme_hor_10"
                 />
         </LinearLayout>
-        
     </RelativeLayout>
-
 </LinearLayout>
+</ScrollView>
